plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
        id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

javafx{
    version="17.0.13"
    modules=['javafx.controls','javafx.fxml']
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        implementation 'org.openjfx:javafx-controls:17'
        implementation 'org.openjfx:javafx-fxml:17'
        implementation 'org.openjfx:javafx-base:17'
        implementation 'org.springframework:spring-websocket'
        implementation 'org.springframework:spring-messaging'
        implementation 'org.java-websocket:Java-WebSocket:1.5.2'
        implementation 'org.springframework.integration:spring-integration-http'
	implementation 'org.springframework.integration:spring-integration-jpa'
	implementation 'org.springframework.integration:spring-integration-stomp'
	implementation 'org.springframework.integration:spring-integration-websocket'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
    jvmArgs = [
        "--module-path", "C:/Program Files/Java/javafx-sdk-17.0.13/lib",
        "--add-modules", "javafx.controls,javafx.fxml"
    ]
}
